--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,10 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_python_setup()
 catkin_package()
+
+install(DIRECTORY
+  src/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
+  PATTERN "*.pyc" EXCLUDE
+  PATTERN "*.egg-info" EXCLUDE
+)
